[project]
name = "markdowntopdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bleach>=6.2.0",
    "fastapi>=0.116.1",
    "markdown>=3.8.2",
    "markdown2>=2.5.4",
    "playwright>=1.54.0",
    "pygments>=2.19.2",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.3",
    "uvicorn>=0.35.0",
]
